<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/dashboardFragment"
        android:icon="@drawable/ic_home_24"
        android:title="@string/nav_dashboard" />
    <item
        android:id="@+id/transactionsFragment"
        android:icon="@drawable/ic_swap_horiz_24"
        android:title="@string/nav_transactions" />
    <item
        android:id="@+id/budgetFragment"
        android:icon="@drawable/ic_wallet_24"
        android:title="@string/nav_budget" />
    <item
        android:id="@+id/statisticsFragment"
        android:icon="@drawable/ic_bar_chart_24"
        android:title="@string/nav_statistics" />
    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_settings_24"
        android:title="@string/nav_settings" />
</menu>
