<?xml version="1.0" encoding="utf-8"?>
<!--
    Menu contextuel (PopupMenu) du bouton "⋮" d'une Card de modèle (voir item_marketplace_template.xml/
    MarketplaceAdapter, cahier des charges "Marketplace personnelle", section 6).

    Libellé de action_toggle_favorite déterminé au moment de l'ouverture (voir
    MarketplaceAdapter.showActionsMenu) : `android:title` ci-dessous n'est qu'un texte de repli tel
    que défini par l'attribut XML — toujours remplacé avant l'affichage.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_edit_24"
        android:title="@string/action_edit" />
    <item
        android:id="@+id/action_toggle_favorite"
        android:icon="@drawable/ic_star_24"
        android:title="@string/marketplace_action_add_favorite" />
    <item
        android:id="@+id/action_duplicate"
        android:icon="@drawable/ic_content_copy_24"
        android:title="@string/marketplace_action_duplicate" />
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete_24"
        android:title="@string/action_delete" />
</menu>
